--- a/050101/050201/050201.html
+++ b/050101/050201/050201.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>050201</title>
+		<script type="text/javascript" src="050201.js" defer></script>
 	</head>
 	<body>
 		<div class="main" id="main">Main</div>
+		<div class="sidebar">Sidebar</div>
 		<div class="main" id="content">Content</div>
 	</body>
 </html>
