--- a/050301/050301.html
+++ b/050301/050301.html
@@ -9,5 +9,6 @@
 	<body>
 		<div id="main">Main</div>
 		<div id="content">Content</div>
+		<div class="products" id="products"></div>
 	</body>
 </html>
