--- a/050401/050401.html
+++ b/050401/050401.html
@@ -12,5 +12,10 @@
 		  <li class="selected">2</li>
 		  <li></li>
 		</ul>
+		<ul>
+		  <li class="selected primary">1</li>
+		  <li class="selected">2</li>
+		  <li class="selected">3</li>
+		</ul>
 	</body>
 </html>
