corrected 050401 since got the question backwards

--- a/050501/050501.html
+++ b/050501/050501.html
@@ -8,5 +8,10 @@
 	</head>
 	<body>
 		<button type="button" onclick="a(this)" class="on">ON</button>
+
+		<input type="number" onkeyup="getText(this)" class="number" placeholder="Number 1">
+		<input type="number" class="number" placeholder="Number 2">
+		<label>Total: <span id="total"></span></label>
+
 	</body>
 </html>
